--- a/calc.css
+++ b/calc.css
@@ -6,7 +6,7 @@
 
 .containor{
     width: 100%;
-    height: 100vh;
+    height: auto;
     background-color: rgb(164, 164, 219);
     display: flex;
     align-items: center;
