--- a/calc.css
+++ b/calc.css
@@ -6,13 +6,7 @@
 body{
     background-color: rgb(164, 164, 219);
 }
-h1{
-    text-align: center;
-    background-color: brown;
-    font-size: 70px;
-    color: white;
-    
-}
+
 .containor{
     width: 100%;
     height: 100vh;
@@ -59,3 +53,9 @@ form .display input{
 form input.equal{
     width: 145px ;
 } 
+legend{
+    color: aliceblue;
+    text-align: center;
+    font-size: 30px;
+    
+}
